Fix floating menu z-index

--- a/css/template.less
+++ b/css/template.less
@@ -243,7 +243,7 @@ header {
   position: absolute;
   right: 27px;
   top: 50px;
-  z-index: 1000;
+  z-index: 999;
   text-align: center;
 
   ul li a {
